--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "google-ads-api": "^17.1.0",
+    "facebook-nodejs-business-sdk": "^21.0.5",
+    "linkedin-api-client": "^0.3.0",
+    "@tobyg74/tiktok-api-dl": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
