--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marketing-analytics-dashboard",
+  "name": "adalyze-marketing-analytics",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,13 +12,24 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@visx/group": "^3.3.0",
+    "@visx/heatmap": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "@visx/tooltip": "^3.3.0",
+    "@visx/grid": "^3.3.0",
+    "@visx/shape": "^3.3.0",
+    "@visx/axis": "^3.3.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "facebook-nodejs-business-sdk": "^21.0.5",
+    "google-ads-api": "^17.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "linkedin-api-client": "^0.3.0",
     "lucide-react": "^0.344.0",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.11",
@@ -31,9 +42,6 @@
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
     "speakeasy": "^2.0.0",
-    "google-ads-api": "^17.1.0",
-    "facebook-nodejs-business-sdk": "^21.0.5",
-    "linkedin-api-client": "^0.3.0",
     "@tobyg74/tiktok-api-dl": "^1.2.1"
   },
   "devDependencies": {
